--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             --input-text-color: #ffff00;
             --command-prompt-color: #ffff00;
             --output-bg-color: transparent;
+            --system-text-color: #fff;
         }
 
         body {
@@ -205,7 +206,7 @@
         }
 
         .input-area span {
-            color: #00ffff;
+            color: var(--system-text-color);
             flex-shrink: 0;
         }
 
@@ -377,6 +378,7 @@
             --input-text-color: #e0ffff;
             --command-prompt-color: #e0ffff;
             --output-bg-color: #001f3d;
+            --system-text-color: #00ffff;
         }
 
         .theme-greenish {
@@ -424,6 +426,7 @@
             --input-text-color: #ffffff;
             --command-prompt-color: #ffffff;
             --output-bg-color: #252525;
+            --system-text-color: #ffff00
         }
 
         .output-area a {
@@ -446,7 +449,7 @@
     <div class="scanline"></div>
     <div class="main-content">
         <header >
-            <span id="main-heading">> STEPHEN NYAMWEYA O :: CV v0.4</span>
+            <span id="main-heading">> STEPHEN-NYAMWEYA-O :: CV v0.4</span>
             <!-- <span id="main-heading2">CV v2.3</span> -->
         </header>
 
