UI footer update

--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
           <li><a href="#" onclick="event.preventDefault(); runCommand('theme darkie')">DARKIE</a></li>
           <li><a href="#" onclick="event.preventDefault(); cycleTheme();">CYCLE THEME</a></li>
        </ul>
-       <p class="sidebar-copyright">&copy; Stephen Nyamweya Ongera <span id="copyrightYear"></span></p>
+       <p class="sidebar-copyright">&copy; <span id="copyrightYear"></span>, Stephen Nyamweya Ongera</p>
     </div>
 
     <script>
