--- a/index.html
+++ b/index.html
@@ -657,10 +657,13 @@
         ];
         const experienceData = [
            ["system", "[RUNNING] Fetching experience details..."],
-           ["data", "&gt; At MNOCK Ltd (Part-Time), focused on payment workflows, M-Pesa API integration, and AWS deployments with CI/CD."],
-           ["data", "  - Technologies used: Node.js, AWS, M-Pesa API, CI/CD."],
-           ["data", "&gt; At Valice Ltd, worked on microservices, real-time data processing, and database optimization."],
+           ["data", "&gt; At Snospark LLC (founder) part-time"],
+           ["data", "  - Collaborate with various clients to build diverse products using Next.js, NestJS, and React."],
+           ["data", "&gt; At ElderTools LLC, works on microservices, web/mobile app developent, real-time data processing, and system optimizations."],
            ["data", "  - Technologies used: Microservices, Real-time Data, SQL, NoSQL."],
+           ["data", "&gt; At MNOCK Ltd, focused on payment workflows, M-Pesa API integration, and AWS deployments with CI/CD."],
+           ["data", "  - Technologies used: Node.js, AWS, M-Pesa API, CI/CD."],
+           
            ["system", "[SYSTEM] Experience details loaded."]
         ];
         const projectsData = [
