Add seo and analytics

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STEPHEN NYAMWEYA CV SYSTEM</title>
+
+    <meta name="description" content="Interactive command-line style CV for Stephen Nyamweya Ongera, a Senior Software Engineer specializing in Node.js, React, NestJS, Microservices, and Cloud Technologies.">
+    <meta name="keywords" content="Stephen Nyamweya Ongera, Senior Software Engineer, CV, Resume, Node.js, React, NestJS, Python, Microservices, Cloud, AWS, Fintech, Full-Stack Developer, Portfolio">
+    <meta name="author" content="Stephen Nyamweya Ongera">
+    <link rel="canonical" href="YOUR_CANONICAL_URL_HERE">
+
+    <meta property="og:title" content="Stephen Nyamweya Ongera - Senior Software Engineer CV">
+    <meta property="og:description" content="Interactive command-line style CV showcasing the skills and experience of Stephen Nyamweya Ongera.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="www.steve.co.ke">
+
+    <title>Stephen Nyamweya Ongera - Senior Software Engineer CV</title>
+
+
     <link href="https://fonts.googleapis.com/css2?family=VT323&family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
        *,
@@ -586,6 +599,15 @@
           text-align: center;
        }
     </style>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M4Q46VB329"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-M4Q46VB329');
+    </script>
  </head>
 
  <body class="theme-reddy">
@@ -744,7 +766,7 @@
             deleteButton.onclick = () => deleteModule(deleteButton);
             const deleteImg = document.createElement('img');
             deleteImg.src = 'trash.svg';
-            deleteImg.alt = 'Delete';
+            deleteImg.alt = 'Hide module';
             deleteButton.appendChild(deleteImg);
             const promptPara = document.createElement('p');
             promptPara.className = 'command-prompt';
