--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
         ];
         const cvLinkData = [
            ["system", "[SYSTEM] Accessing CV resource..."],
-           ["data", `<a href="full_cv.pdf" target="_blank" style="color: var(--accent-color); text-decoration: underline;">Click here to access CV</a>`],
+           ["data", `<a href="./public/stevereddycv.pdf" target="_blank" style="color: var(--accent-color); text-decoration: underline;">Click here to access CV</a>`],
            ["system", "[SYSTEM] Resource link generated."]
         ];
  
