--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Interactive command-line style CV for Stephen Nyamweya Ongera, a Senior Software Engineer specializing in Node.js, React, NestJS, Microservices, and Cloud Technologies.">
     <meta name="keywords" content="Stephen Nyamweya Ongera, Senior Software Engineer, CV, Resume, Node.js, React, NestJS, Python, Microservices, Cloud, AWS, Fintech, Full-Stack Developer, Portfolio">
     <meta name="author" content="Stephen Nyamweya Ongera">
-    <link rel="canonical" href="YOUR_CANONICAL_URL_HERE">
+    <link rel="canonical" href="www.steve.co.ke">
 
     <meta property="og:title" content="Stephen Nyamweya Ongera - Senior Software Engineer CV">
     <meta property="og:description" content="Interactive command-line style CV showcasing the skills and experience of Stephen Nyamweya Ongera.">
@@ -681,6 +681,10 @@
            ["system", "[RUNNING] Fetching experience details..."],
            ["data", "&gt; At Snospark LLC (founder) part-time"],
            ["data", "  - Collaborate with various clients to build diverse products using Next.js, NestJS, and React."],
+           ["data", "&gt; At Devboxremote ltd, part-time"],
+           ["data", "  - Collaborate with various clients to build diverse products using python, Next.js, NestJS, and React."],
+           ["data", "  - Also focused on building a data pipeline for real-time data processing."],
+           ["data", "  - Technologies used: Node.js, AWS, M-Pesa API, CI/CD."],
            ["data", "&gt; At ElderTools LLC, works on microservices, web/mobile app developent, real-time data processing, and system optimizations."],
            ["data", "  - Technologies used: Microservices, Real-time Data, SQL, NoSQL."],
            ["data", "&gt; At MNOCK Ltd, focused on payment workflows, M-Pesa API integration, and AWS deployments with CI/CD."],
