Update CV experience data

--- a/index.html
+++ b/index.html
@@ -679,15 +679,15 @@
         ];
         const experienceData = [
            ["system", "[RUNNING] Fetching experience details..."],
-           ["data", "&gt; At Snospark LLC (founder) part-time"],
+           ["data", "&gt; Software Engineer at Snospark LLC (founder) part-time"],
            ["data", "  - Collaborate with various clients to build diverse products using Next.js, NestJS, and React."],
-           ["data", "&gt; At Devboxremote ltd, part-time"],
+           ["data", "&gt; Software Engineer at Devboxremote ltd, Software Engineer part-time, Feb 2022 - Present"],
            ["data", "  - Collaborate with various clients to build diverse products using python, Next.js, NestJS, and React."],
            ["data", "  - Also focused on building a data pipeline for real-time data processing."],
            ["data", "  - Technologies used: Node.js, AWS, M-Pesa API, CI/CD."],
-           ["data", "&gt; At ElderTools LLC, works on microservices, web/mobile app developent, real-time data processing, and system optimizations."],
+           ["data", "&gt; Software Engineer at ElderTools LLC, Jan 2023 - Present, works on microservices, web/mobile app developent, real-time data processing, and system optimizations."],
            ["data", "  - Technologies used: Microservices, Real-time Data, SQL, NoSQL."],
-           ["data", "&gt; At MNOCK Ltd, focused on payment workflows, M-Pesa API integration, and AWS deployments with CI/CD."],
+           ["data", "&gt; Lead Software Developer, at MNOCK Ltd, Aug 2023 - Sep 2024, focused on payment workflows, M-Pesa API integration, and AWS deployments with CI/CD."],
            ["data", "  - Technologies used: Node.js, AWS, M-Pesa API, CI/CD."],
            
            ["system", "[SYSTEM] Experience details loaded."]
